# hello-crewai-graphs

./: .gitignore  Makefile  README.md  automated_project.py  customer_outreach.py  customer_support.py  event_planning.py  fake_resume.md  financial_analysis.py  interview_materials.md  marketing_report.md  multi_agent.py  project_progress.py  pyproject.toml  requirements.txt  research_write_article.py  support_data_analysis.py  support_tickets_data.csv  tailored_resume.md  utils.py  venue_details.json
config/: lead_qualification_tasks.yaml  tasks.yaml
