[project]
name = "hello-crewai-graphs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "crewai>=0.126.0",
    "crewai-tools>=0.47.0",
    "langchain-community>=0.3.24",
    "marimo>=0.13.15",
    "pandas>=2.3.0",
]

[dependency-groups]
dev = [
    "arize-phoenix>=10.10.0",
    "black>=25.1.0",
    "flake8>=7.2.0",
    "openinference-instrumentation-crewai>=0.1.10",
    "opentelemetry-exporter-otlp>=1.34.0",
    "opentelemetry-sdk>=1.34.0",
]
